# cctop

./: AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
src/cctop/: app.css  app.py
src/cctop/models/: agent.py  metrics.py  usage.py  usage_metrics.py
src/cctop/parsers/: aggregator.py  jsonl_parser.py
src/cctop/utils/: bundled_pricing.json  formatting.py  pricing.py  pricing_cache.py  pricing_fetcher.py
src/cctop/watchers/: file_watcher.py  log_tailer.py
src/cctop/widgets/: agent_detail.py  agent_table.py  cost_panel.py  metrics_panel.py  notification.py  system_panel.py  usage_panel.py
tests/: test_parsers.py  test_pricing.py  test_pricing_cache.py  test_pricing_fetcher.py
tests/fixtures/: litellm_sample.json  sample_logs.jsonl
